8232802: Shenandoah: transition between "cset" and "pinned_cset" does not require cancelled gc

Reviewed-by: zgu