src/hotspot/share/gc/shenandoah/shenandoahHeapRegion.cpp
@@ -200,7 +200,6 @@ void ShenandoahHeapRegion::make_pinned() {
     case _pinned_humongous_start:
       return;
     case _cset:
-      guarantee(_heap->cancelled_gc(), "only valid when evac has been cancelled");
       _state = _pinned_cset;
       return;
     default:
@@ -220,7 +219,6 @@ void ShenandoahHeapRegion::make_unpinned() {
     case _humongous_start:
       return;
     case _pinned_cset:
-      guarantee(_heap->cancelled_gc(), "only valid when evac has been cancelled");
       set_state(_cset);
       return;
     case _pinned_humongous_start:
